# tableview

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
scripts/: build-static-qt.ps1  build-static-qt.sh
src/: Codec.cpp  Codec.h  CsvReader.cpp  CsvReader.h  DataTypes.h  DbfReader.cpp  DbfReader.h  Filter.cpp  Filter.h  MainWindow.cpp  MainWindow.h  TableModel.cpp  TableModel.h  XlsxReader.cpp  XlsxReader.h  ZipReader.cpp  ZipReader.h  main.cpp
